give 20%vh room to prevent question cutoff

--- a/src/components/Memory.css
+++ b/src/components/Memory.css
@@ -14,5 +14,5 @@
 .memory-grid-item {
     text-align: center;
     font-size: 18px;
-    height: 23vh;
+    height: 20vh;
 }
